--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 
 	implementation 'mysql:mysql-connector-java:8.0.29'
 
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
+
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
