--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   app:
     container_name: cryptowatcher-app
     restart: always
-    image: cryptowatcher-app
+    image: 200605030904/cryptowatcher-app
     build: .
     ports:
       - 8080:8080
