--- a/build.gradle
+++ b/build.gradle
@@ -19,23 +19,25 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
 
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.3'
 
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-	implementation 'mysql:mysql-connector-java:8.0.29'
+	implementation 'mysql:mysql-connector-java:8.0.30'
 
 	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
 
-	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
 }
 
 tasks.named('test') {
