--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,12 @@
 spring:
-  datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/cryptowatcher
-    username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:root}
-  jpa:
-    hibernate:
-      ddl-auto: update
-
-
-multiplecoinsURL: https://api.coinlore.net/api/ticker/?id=80,90,48543
-logging:
-  file:
-    name: logging.log
+  application:
+    name: cryptocurrencywatcher
+  profiles:
+    active: cloud
+  config:
+    import: 'optional:configserver:'
+    cloud:
+      config:
+        uri: http://localhost:8888/
+        enabled: true
+        failFast: true
