--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
+buildscript {
+	repositories {
+		gradlePluginPortal()
+	}
+	dependencies {
+		classpath 'com.bmuschko:gradle-docker-plugin:7.4.0'
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.7.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'com.bmuschko.docker-spring-boot-application' version '7.4.0'
 	id 'java'
 }
 
-group = 'by.markov'
-version = '0.0.1-SNAPSHOT'
+group = 'markov'
+version = '0.1'
 sourceCompatibility = '11'
 
 configurations {
@@ -15,6 +25,7 @@ configurations {
 }
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
@@ -31,11 +42,9 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
-
-	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.4'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
 }
