--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,3 @@
-buildscript {
-	repositories {
-		gradlePluginPortal()
-	}
-	dependencies {
-		classpath 'com.bmuschko:gradle-docker-plugin:7.4.0'
-	}
-}
 
 plugins {
 	id 'org.springframework.boot' version '2.7.1'
@@ -37,14 +29,14 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-	implementation 'mysql:mysql-connector-java:8.0.30'
+	runtimeOnly 'com.h2database:h2'
 
 	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.4'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.4'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
 }
