--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,31 @@
+#     With Config Server
+#spring:
+#  application:
+#    name: cryptocurrencywatcher
+#  profiles:
+#    active: cloud
+#  config:
+#    import: 'optional:configserver:http://${CONFIG_HOST:localhost}:8888/'
+#  cloud:
+#    config:
+#      enabled: true
+
+#      Without Config Server
 spring:
-  application:
-    name: cryptocurrencywatcher
-  profiles:
-    active: cloud
-  config:
-    import: 'optional:configserver:http://${CONFIG_HOST:localhost}:8888/'
-  cloud:
-    config:
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
       enabled: true
+      path: /h2
+
+multiplecoinsURL: https://api.coinlore.net/api/ticker/?id=80,90,48543
+logging:
+  file:
+    name: logging.log
